--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,3 +3,10 @@
     Generar Link para crear al Empleado
   </button>
 </div>
+<!-- <mat-chart [data]="barChartData"></mat-chart> -->
+
+<!-- [labels]="barChartLabels" -->
+<!-- [options]="barChartOptions"
+[type]="barChartType"
+[legend]="barChartLegend"
+[plugins]="barChartPlugins" -->
