--- a/src/app/components/personal-information-form/personal-documentation-form/personal-documentation-form.component.html
+++ b/src/app/components/personal-information-form/personal-documentation-form/personal-documentation-form.component.html
@@ -30,14 +30,15 @@
         </mat-card-actions>
       </mat-step>
 
-      <mat-step [completed]="nextStep">
+      <mat-step>
         <ng-template matStepLabel>
           <span class="title"> Adjunte su Curriculum Vitae </span>
         </ng-template>
         <mat-card-header>
           <mat-card-subtitle>
             Verifique que el documento sea legible.
-            <br />Formatos permitidos: .png, .jpeg .pdf y .docx
+            <br />Puede subir hasta dos archivos. <br />Formatos permitidos:
+            .png, .jpeg y .pdf
           </mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
