--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -107,7 +107,7 @@
         </mat-card-content>
       </mat-step>
 
-      <mat-step>
+      <!-- <mat-step>
         <ng-template matStepLabel> Información Academica </ng-template>
         <mat-card-content>
           <mat-grid-list cols="2" rowHeight="50px">
@@ -125,7 +125,7 @@
             </mat-grid-tile>
           </mat-grid-list>
         </mat-card-content>
-      </mat-step>
+      </mat-step> -->
     </mat-vertical-stepper>
   </mat-card>
 
