--- a/src/app/components/personal-information-form/finantial-information-form/finantial-information-form.component.html
+++ b/src/app/components/personal-information-form/finantial-information-form/finantial-information-form.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" class="form-content">
-  <mat-card-content class="form-content__column">
+  <mat-card-content class="form-content__all">
     <mat-form-field class="form-content__input">
       <mat-label>Numero de Cuenta</mat-label>
       <input
@@ -16,7 +16,7 @@
       <mat-select
         matNativeControl
         required
-        placeholder="Tipo de cuenta"
+        placeholder="Tipo de cuenta bancaria"
         formControlName="accountType">
         <mat-option *ngFor="let account of accountOptions" [value]="account"
           >{{ account }}
@@ -26,13 +26,12 @@
         </mat-error>
       </mat-select>
     </mat-form-field>
-  </mat-card-content>
-  <mat-card-content class="form-content__column">
+
     <mat-form-field class="form-content__input">
       <mat-label>Numero de NUA/CUA</mat-label>
       <input
         matInput
-        placeholder="Numero de NUA/CUA"
+        placeholder="Numero de NUA/CUA de AFP"
         formControlName="afpNumber" />
       <mat-error *ngIf="form.hasError('required', 'afpNumber')">
         El campo de NUA/CUA es requerido
