--- a/src/app/components/charts/charts.component.html
+++ b/src/app/components/charts/charts.component.html
@@ -1,2 +1,12 @@
-<p>charts works!</p>
-<figure id="bar"></figure>
+<div class="container">
+  <mat-card class="card">
+    <mat-card-header>
+      <span class="card__title">
+        Cantidad de ingresos de empleado a la empresa
+      </span>
+    </mat-card-header>
+    <mat-card-content>
+      <figure id="fig"></figure>
+    </mat-card-content>
+  </mat-card>
+</div>
