--- a/src/app/components/personal-information-form/personal-documentation-form/personal-documentation-form.component.html
+++ b/src/app/components/personal-information-form/personal-documentation-form/personal-documentation-form.component.html
@@ -11,7 +11,7 @@
           <mat-card-subtitle>
             Verifique que las imagenes esten correctamente enfocadas y no estén
             borrosas o ilegibles.
-            <br />Puede subir hasta dos archivos <br />Formatos permitidos:
+            <br />Puede subir hasta cinco archivos <br />Formatos permitidos:
             .png, .jpeg y .pdf
           </mat-card-subtitle>
         </mat-card-header>
@@ -37,7 +37,7 @@
         <mat-card-header>
           <mat-card-subtitle>
             Verifique que el documento sea legible.
-            <br />Puede subir hasta dos archivos. <br />Formatos permitidos:
+            <br />Puede subir hasta cinco archivos. <br />Formatos permitidos:
             .png, .jpeg y .pdf
           </mat-card-subtitle>
         </mat-card-header>
