--- a/src/app/components/personal-information-form/personal-documentation-form/personal-documentation-form.component.scss
+++ b/src/app/components/personal-information-form/personal-documentation-form/personal-documentation-form.component.scss
@@ -61,8 +61,6 @@
 
 
 .title{
-    // position: absolute; 
     font-size: 18px; 
-    color: #171A1FFF; /* neutral-900 */
-
+    color: #171A1FFF; 
 }
