clean code and fixes

--- a/src/app/components/menu/sidenav-content/sidenav-content.component.html
+++ b/src/app/components/menu/sidenav-content/sidenav-content.component.html
@@ -21,16 +21,16 @@
   </div>
   <mat-divider></mat-divider>
   <div class="menu-container">
-    <button mat-button class="menu-button" routerLink="/reports">
+    <button mat-button class="menu-button" routerLink="/chart">
       <mat-icon>insert_chart_outlined</mat-icon>
       <span>Reportes</span>
     </button>
   </div>
   <mat-divider></mat-divider>
-  <div class="menu-container">
+  <!-- <div class="menu-container">
     <button mat-button class="menu-button" routerLink="/my-profilee">
       <mat-icon>account_box</mat-icon>
       <span>Mi cuenta</span>
     </button>
-  </div>
+  </div> -->
 </div>
